--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,116 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-776.8KB/s(Youtube:不良林), server: 167.88.61.2, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 中国-331.0KB/s(Youtube:不良林), server: in-sg-1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-sg-1.onebox6.org}}
-  - {name: 🇭🇰 香港-467.3KB/s(Youtube:不良林), server: AZHJ001.xiba1.xyz, port: 20721, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZHJ001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-333.4KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
-  - {name: 🇺🇸 美国-452.0KB/s(Youtube:不良林), server: 212.81.47.11, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-954.7KB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
-  - {name: 🇷🇺 俄罗斯联邦-667.6KB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1c08f35bdafe74a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
-  - {name: 🇨🇳 中国-3.20MB/s(Youtube:不良林), server: cm-gz.okvpn.xyz, port: 20005, type: trojan, password: e10b7aab-3498-472a-9a3f-f15800163aa7, sni: cm-gz.okvpn.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.78MB/s(Youtube:不良林), server: cu-cs.okvpn.xyz, port: 20003, type: trojan, password: e10b7aab-3498-472a-9a3f-f15800163aa7, sni: cu-cs.okvpn.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.28MB/s(Youtube:不良林), server: 116.129.254.212, port: 48606, type: ssr, cipher: aes-256-cfb, password: GjRQkK, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 1062:tLkKEk, obfs-param: ""}
+  - {name: 🇨🇳 中国-427.1KB/s(Youtube:不良林), server: 120.241.236.93, port: 34955, type: trojan, password: 7cb64c49-2ce5-4fa6-9b79-9c02eb54735c, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-6.81MB/s(Youtube:不良林), server: cm-gz.okvpn.xyz, port: 20005, type: trojan, password: e10b7aab-3498-472a-9a3f-f15800163aa7, sni: cm-gz.okvpn.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.44MB/s(Youtube:不良林), server: rn.uuuuuu.eu, port: 443, type: trojan, password: !<str> 888888, sni: rn.uuuuuu.eu, skip-cert-verify: true}
+  - {name: 未知国家-1.12MB/s(Youtube:不良林), server: 193.178.210.29, port: 443, type: trojan, password: iKR3Ft, skip-cert-verify: true}
+  - {name: 🇰🇷 韩国-1.31MB/s(Youtube:不良林), server: ocikr.n.optage.moe, port: 62500, type: trojan, password: c940ea61-853d-45e1-8296-9b334f83fa87, sni: ocikr.n.optage.moe, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-586.4KB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 6004, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-1.05MB/s(Youtube:不良林), server: AZHJ001.xiba1.xyz, port: 20723, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZHJ001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-363.2KB/s(Youtube:不良林), server: AZQT001.xiba1.xyz, port: 20733, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZQT001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.12MB/s(Youtube:不良林), server: au2-1.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-1.nigirocloud.com, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-906.3KB/s(Youtube:不良林), server: AZQT001.xiba1.xyz, port: 20747, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZQT001.xiba1.xyz, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-776.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-331.0KB/s(Youtube:不良林)
-      - 🇭🇰 香港-467.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-333.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-452.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-954.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-667.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.20MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-427.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.44MB/s(Youtube:不良林)
+      - 未知国家-1.12MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.31MB/s(Youtube:不良林)
+      - 🇭🇰 香港-586.4KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-363.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-906.3KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-776.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-331.0KB/s(Youtube:不良林)
-      - 🇭🇰 香港-467.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-333.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-452.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-954.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-667.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.20MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-427.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.44MB/s(Youtube:不良林)
+      - 未知国家-1.12MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.31MB/s(Youtube:不良林)
+      - 🇭🇰 香港-586.4KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-363.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-906.3KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-776.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-331.0KB/s(Youtube:不良林)
-      - 🇭🇰 香港-467.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-333.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-452.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-954.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-667.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.20MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-427.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.44MB/s(Youtube:不良林)
+      - 未知国家-1.12MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.31MB/s(Youtube:不良林)
+      - 🇭🇰 香港-586.4KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-363.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-906.3KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-467.3KB/s(Youtube:不良林)
+      - 🇭🇰 香港-586.4KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.05MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-776.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-331.0KB/s(Youtube:不良林)
-      - 🇭🇰 香港-467.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-333.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-452.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-954.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-667.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.20MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-427.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.44MB/s(Youtube:不良林)
+      - 未知国家-1.12MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.31MB/s(Youtube:不良林)
+      - 🇭🇰 香港-586.4KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-363.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-906.3KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-776.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-331.0KB/s(Youtube:不良林)
-      - 🇭🇰 香港-467.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-333.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-452.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-954.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-667.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.20MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-427.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.44MB/s(Youtube:不良林)
+      - 未知国家-1.12MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.31MB/s(Youtube:不良林)
+      - 🇭🇰 香港-586.4KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-363.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-906.3KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-776.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-331.0KB/s(Youtube:不良林)
-      - 🇭🇰 香港-467.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-333.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-452.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-954.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-667.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.20MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-427.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.44MB/s(Youtube:不良林)
+      - 未知国家-1.12MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.31MB/s(Youtube:不良林)
+      - 🇭🇰 香港-586.4KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-363.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-906.3KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +130,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-776.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-331.0KB/s(Youtube:不良林)
-      - 🇭🇰 香港-467.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-333.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-452.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-954.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-667.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.20MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-427.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.44MB/s(Youtube:不良林)
+      - 未知国家-1.12MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.31MB/s(Youtube:不良林)
+      - 🇭🇰 香港-586.4KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-363.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
+      - 🇺🇸 美国-906.3KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
