--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,116 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-427.1KB/s(Youtube:不良林), server: 120.241.236.93, port: 34955, type: trojan, password: 7cb64c49-2ce5-4fa6-9b79-9c02eb54735c, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-6.81MB/s(Youtube:不良林), server: cm-gz.okvpn.xyz, port: 20005, type: trojan, password: e10b7aab-3498-472a-9a3f-f15800163aa7, sni: cm-gz.okvpn.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.44MB/s(Youtube:不良林), server: rn.uuuuuu.eu, port: 443, type: trojan, password: !<str> 888888, sni: rn.uuuuuu.eu, skip-cert-verify: true}
-  - {name: 未知国家-1.12MB/s(Youtube:不良林), server: 193.178.210.29, port: 443, type: trojan, password: iKR3Ft, skip-cert-verify: true}
-  - {name: 🇰🇷 韩国-1.31MB/s(Youtube:不良林), server: ocikr.n.optage.moe, port: 62500, type: trojan, password: c940ea61-853d-45e1-8296-9b334f83fa87, sni: ocikr.n.optage.moe, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-586.4KB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 6004, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-1.05MB/s(Youtube:不良林), server: AZHJ001.xiba1.xyz, port: 20723, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZHJ001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-363.2KB/s(Youtube:不良林), server: AZQT001.xiba1.xyz, port: 20733, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZQT001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.12MB/s(Youtube:不良林), server: au2-1.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-1.nigirocloud.com, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-906.3KB/s(Youtube:不良林), server: AZQT001.xiba1.xyz, port: 20747, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZQT001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.85MB/s(Youtube:不良林), server: au2-2.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-2.nigirocloud.com, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-8.08MB/s(Youtube:不良林), server: transit1.fanqiang.eu, port: 15004, type: trojan, password: 7259391b-9f01-4ede-90dc-3955cf1c4998, sni: transit1.fanqiang.eu, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-318.7KB/s(Youtube:不良林), server: AZQT001.xiba1.xyz, port: 20733, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZQT001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-321.6KB/s(Youtube:不良林), server: AZQT001.xiba1.xyz, port: 20736, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZQT001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-4.68MB/s(Youtube:不良林), server: jgwdb3.gaox.ml, port: 443, type: trojan, password: 8d2d5953-d649-4034-94f2-72f2df2623da, sni: jgwdb3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-307.1KB/s(Youtube:不良林), server: AZQT001.xiba1.xyz, port: 20729, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZQT001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-707.6KB/s(Youtube:不良林), server: AZQT001.xiba1.xyz, port: 20734, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZQT001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1001.1KB/s(Youtube:不良林), server: AZQT001.xiba1.xyz, port: 20746, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZQT001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-979.0KB/s(Youtube:不良林), server: AZQT001.xiba1.xyz, port: 20730, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZQT001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-557.3KB/s(Youtube:不良林), server: AZQT001.xiba1.xyz, port: 20728, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZQT001.xiba1.xyz, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-427.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.44MB/s(Youtube:不良林)
-      - 未知国家-1.12MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.31MB/s(Youtube:不良林)
-      - 🇭🇰 香港-586.4KB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-363.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-906.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-8.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-318.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-321.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-307.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-707.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1001.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-979.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-557.3KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-427.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.44MB/s(Youtube:不良林)
-      - 未知国家-1.12MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.31MB/s(Youtube:不良林)
-      - 🇭🇰 香港-586.4KB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-363.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-906.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-8.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-318.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-321.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-307.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-707.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1001.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-979.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-557.3KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-427.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.44MB/s(Youtube:不良林)
-      - 未知国家-1.12MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.31MB/s(Youtube:不良林)
-      - 🇭🇰 香港-586.4KB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-363.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-906.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-8.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-318.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-321.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-307.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-707.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1001.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-979.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-557.3KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-586.4KB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.05MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-427.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.44MB/s(Youtube:不良林)
-      - 未知国家-1.12MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.31MB/s(Youtube:不良林)
-      - 🇭🇰 香港-586.4KB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-363.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-906.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-8.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-318.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-321.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-307.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-707.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1001.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-979.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-557.3KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-427.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.44MB/s(Youtube:不良林)
-      - 未知国家-1.12MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.31MB/s(Youtube:不良林)
-      - 🇭🇰 香港-586.4KB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-363.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-906.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-8.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-318.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-321.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-307.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-707.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1001.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-979.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-557.3KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-427.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.44MB/s(Youtube:不良林)
-      - 未知国家-1.12MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.31MB/s(Youtube:不良林)
-      - 🇭🇰 香港-586.4KB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-363.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-906.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-8.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-318.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-321.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-307.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-707.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1001.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-979.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-557.3KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -130,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-427.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.44MB/s(Youtube:不良林)
-      - 未知国家-1.12MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.31MB/s(Youtube:不良林)
-      - 🇭🇰 香港-586.4KB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-363.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-906.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-8.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-318.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-321.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-307.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-707.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1001.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-979.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-557.3KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
