--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-5.45MB/s(Youtube:不良林), server: 212.81.47.15, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-427.1KB/s(Youtube:不良林), server: 120.241.236.93, port: 34955, type: trojan, password: 7cb64c49-2ce5-4fa6-9b79-9c02eb54735c, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-188.1KB/s(Youtube:不良林), server: hk6702.fans8.xyz, port: 443, type: trojan, password: bbdff6a8-2e22-4d37-a4ab-a038bc646bd9, sni: hk6702.fans8.xyz, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-4.68MB/s(Youtube:不良林), server: jgwdb3.gaox.ml, port: 443, type: trojan, password: 8d2d5953-d649-4034-94f2-72f2df2623da, sni: jgwdb3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-321.6KB/s(Youtube:不良林), server: AZQT001.xiba1.xyz, port: 20736, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZQT001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-277.0KB/s(Youtube:不良林), server: AZQT001.xiba1.xyz, port: 20730, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZQT001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-557.3KB/s(Youtube:不良林), server: AZQT001.xiba1.xyz, port: 20728, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZQT001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-2.49MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-1.28MB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
-  - {name: 🇷🇺 俄罗斯联邦-2.09MB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1c08f35bdafe74a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
+  - {name: 🇯🇵 日本-1.70MB/s(Youtube:不良林), server: jgwdb3.gaox.ml, port: 443, type: trojan, password: 8d2d5953-d649-4034-94f2-72f2df2623da, sni: jgwdb3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-312.8KB/s(Youtube:不良林), server: AZQT001.xiba1.xyz, port: 20734, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZQT001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.99MB/s(Youtube:不良林), server: 212.81.47.18, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.62MB/s(Youtube:不良林), server: au2-2.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-2.nigirocloud.com, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-2.77MB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1c08f35bdafe74a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
+  - {name: 🇨🇳 中国-344.1KB/s(Youtube:不良林), server: sg-cn.teacher2050.com, port: 43508, type: trojan, password: E44523FE-B9E4-BD49-AEAF-DBABE701D016, sni: sg-cn.teacher2050.com, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.65MB/s(Youtube:不良林), server: 212.81.47.16, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.27MB/s(Youtube:不良林), server: au2-1.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-1.nigirocloud.com, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.68MB/s(Youtube:不良林), server: 212.81.47.17, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-1.69MB/s(Youtube:不良林), server: 51.210.51.88, port: 443, type: ssr, cipher: aes-192-ctr, password: sEscPBiAD9K$&@79, protocol: auth_chain_a, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-5.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-427.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-188.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.68MB/s(Youtube:不良林)
-      - 🇺🇸 美国-321.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-277.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-557.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.49MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.28MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.09MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-312.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.62MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.77MB/s(Youtube:不良林)
+      - 🇨🇳 中国-344.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.68MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.69MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-5.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-427.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-188.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.68MB/s(Youtube:不良林)
-      - 🇺🇸 美国-321.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-277.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-557.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.49MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.28MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.09MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-312.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.62MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.77MB/s(Youtube:不良林)
+      - 🇨🇳 中国-344.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.68MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.69MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-5.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-427.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-188.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.68MB/s(Youtube:不良林)
-      - 🇺🇸 美国-321.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-277.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-557.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.49MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.28MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.09MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-312.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.62MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.77MB/s(Youtube:不良林)
+      - 🇨🇳 中国-344.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.68MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.69MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-5.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-427.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-188.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.68MB/s(Youtube:不良林)
-      - 🇺🇸 美国-321.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-277.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-557.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.49MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.28MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.09MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-312.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.62MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.77MB/s(Youtube:不良林)
+      - 🇨🇳 中国-344.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.68MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.69MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-5.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-427.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-188.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.68MB/s(Youtube:不良林)
-      - 🇺🇸 美国-321.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-277.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-557.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.49MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.28MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.09MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-312.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.62MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.77MB/s(Youtube:不良林)
+      - 🇨🇳 中国-344.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.68MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.69MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-5.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-427.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-188.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.68MB/s(Youtube:不良林)
-      - 🇺🇸 美国-321.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-277.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-557.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.49MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.28MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.09MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-312.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.62MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.77MB/s(Youtube:不良林)
+      - 🇨🇳 中国-344.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.68MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.69MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-5.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-427.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-188.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.68MB/s(Youtube:不良林)
-      - 🇺🇸 美国-321.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-277.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-557.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.49MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.28MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.09MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-312.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.62MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.77MB/s(Youtube:不良林)
+      - 🇨🇳 中国-344.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.68MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.69MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
